# esp32-gauge

./: README.md  platformio.ini
lib/: lv_conf.h
lib/TFT_eSPI/: User_Setup.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_comp_hook.c  ui_events.h  ui_font_Font_14.c  ui_font_Font_16.c  ui_font_Font_18.c  ui_font_Font_22.c  ui_font_Font_24.c  ui_font_Nico_Moji_24.c  ui_helpers.c  ui_helpers.h  ui_img_battery_logo_png.c  ui_img_gauge_png.c  ui_img_main_frame_png.c  ui_img_nerdtronics_png.c  ui_img_temp_logo_png.c  ui_img_temp_unit_png.c  ui_img_top_body_png.c  ui_img_ui_charging_charging_off_png.c  ui_img_ui_charging_charging_on_png.c  ui_img_ui_fuel_tank_png.c  ui_img_ui_gauge_png.c  ui_img_ui_ground_png.c  ui_img_ui_lines_png.c  ui_img_ui_motorbike_png.c  ui_img_voltage_unit_png.c
src/: main.cpp
